tests/core/errors/test_formatting_data/during_load/via_dep/TARGETS.fixture
stub(
    name = "via_dep",
    deps = ["//during_load:get"],
)
